--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<title>Snake game</title>
 </head>
 <body>
-	
+<div class="wrapper">
+	<div class="game-details">
+		<span class="score">Score:10</span>
+		<span class="high-score">High Score:40</span>
+	</div>
+	<div class="game-board">
+		
+	</div>
+</div>	
 
 
 
