--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 
 	<!-- script -->
-	<script src="./js/food.js"></script>
+	<script src="./js/script.js"></script>
+  
 </div>	
 </body>
 </html>
