--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body class=" flex justify-center bg-emerald-300 ">
   <div class="container h-96 w-1/3 mt-16 " id="container">
 	<div class="container bg-slate-900" id="game-details">
-		<span id="score">Score:10</span>
-		<span class="high-score">High Score:40</span>
+		<span id="score">Score:0</span>
+		<span id="high-score">High Score:0</span>
 	</div>
 	<div id="game-board">
 		
